# bluez-prebuilts

./: CMakeLists.txt  test_bluez.cpp
include/bluez-5.50/: Makefile  config.h  config.status
include/bluez-5.50/client/: bluetoothctl
include/bluez-5.50/lib/: bluez.pc  libbluetooth.la
include/bluez-5.50/lib/.deps/: bluetooth.Plo
include/bluez-5.50/lib/.libs/: libbluetooth.lai
include/bluez-5.50/monitor/: btmon
include/bluez-5.50/obexd/src/: obexd
include/bluez-5.50/profiles/cups/: bluetooth
include/bluez-5.50/profiles/iap/: iapd
include/bluez-5.50/src/: bluetoothd  bluetoothd.8
include/bluez-5.50/tools/: advtest  amptest  avinfo  avtest  bccmd  bdaddr  bluemoon  bluetooth-player  bneptest  btattach  btconfig  btgatt-client  btgatt-server  btinfo  btiotest  btmgmt  btproxy  btsnoop  check-selftest  cltest  create-image  eddystone  gatt-service  hcieventmask  hcisecfilter  hex2hcd  hid2hci  hwdb  ibeacon  l2ping  l2test  mcaptest  mpris-proxy  nokfw  obex-client-tool  obex-server-tool  obexctl  oobtest  rctest  rtlfw  (+3 more)
src/: agent.c  bt_connect.cpp  bt_get_managed_objects.cpp  bt_read.cpp  bt_sdp_query.cpp  bt_test_gdbus.cpp  bt_xbox_controller_read.cpp
src/client/: agent.h
